--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "tailwindcss-aspect-ratio": "^3.0.0",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
